--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -5698,12 +5698,17 @@ p{
 }
 
 /* body styles */
+html {
+  overflow-x: hidden;
+}
+
 body {
   margin: 0;
   padding: 0;
   font-family: "Outfit", sans-serif;
   -webkit-tap-highlight-color: transparent;
   color: #060b1e;
+  overflow-x: hidden;
 }
 
 /* Gradient Styles */
